--- a/SE/styles.css
+++ b/SE/styles.css
@@ -15,7 +15,9 @@ header {
   padding: 5px;
   display: flex;
   align-items: center;
+  
   margin-bottom: 0;
+ 
 }
 
 .menu {
@@ -66,6 +68,7 @@ h1 {
   font-size: 60px; /* Adjust the font size as needed */
   font-weight: bold;
   flex: 1;
+  margin-left:-100px;
 }
 
 /* Main section styles */
