--- a/SE/styles.css
+++ b/SE/styles.css
@@ -12,10 +12,10 @@ body {
 /* Header styles */
 header {
   background-color: #007bff;
-  padding: 5px;
+  padding: 10px;
   display: flex;
   align-items: center;
-  
+   justify-content: space-between;
   margin-bottom: 0;
  
 }
@@ -25,6 +25,7 @@ header {
   padding: 10px 0;
   text-align: center;
   margin-top: 0;
+   font-weight:bold;
 }
 
 .menu li {
@@ -33,14 +34,56 @@ header {
 }
 
 .menu li a {
-  color: blue;
+  color: white;
   text-decoration: none;
   padding: 5px 10px;
+  transition: background-color 0.3s ease;
+   font-weight:bold;
 }
 
 .menu li a:hover {
+  background-color: #d9d9d9;
+}
+/* Existing styles */
+
+/* Existing styles */
+
+.menu li.dropdown {
+  position: relative;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #777777;
+  padding: 10px;
+  top: 100%;
+  left: 0;
+  z-index: 999; /* Adjust the z-index value as needed */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.menu li.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu li {
+  margin-bottom: 5px;
+  padding:5px;
+}
+
+.dropdown-menu li a {
+  color: #00529f;;
+  text-decoration: none;
+  padding: 5px 10px;
+  display:block;
+   font-weight:bold;
+}
+
+.dropdown-menu li a:hover {
   background-color: #e0e0e0;
 }
+
 
 .logo {
   margin-right: 10px;
@@ -68,7 +111,8 @@ h1 {
   font-size: 60px; /* Adjust the font size as needed */
   font-weight: bold;
   flex: 1;
-  margin-left:-100px;
+  margin-left:-140px;
+  font-weight:bold;
 }
 
 /* Main section styles */
@@ -84,6 +128,7 @@ section {
 h2 {
   color: #007bff;
   text-align: center;
+  font-weight:bold;
 }
 
 /* Form styles */
@@ -101,12 +146,17 @@ h2 {
 
 label {
   width: 120px;
+  font-weight:bold;
 }
 
 input[type="text"],
 input[type="password"] {
   flex: 1;
   padding: 5px;
+  font-size: 16px;
+   font-weight:bold;
+  border-radius: 5px;
+  border: 1px solid #cccccc;
 }
 
 button {
@@ -115,6 +165,9 @@ button {
   background-color: #007bff;
   color: white;
   cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 5px;
 }
 
 button:hover {
