--- a/SE/styles.css
+++ b/SE/styles.css
@@ -148,6 +148,42 @@ label {
   width: 120px;
   font-weight:bold;
 }
+.banner {
+  display: none;
+  background-color: #f8f8f8;
+  border-top: 1px solid #ddd;
+  padding: 10px;
+  text-align: center;
+  position: absolute;
+  overflow: hidden;
+  
+  bottom: 0;
+ width:96.5%;
+}
+.main-content {
+  margin-bottom: 28px; /* Adjust the value as needed */
+}
+
+.banner-text {
+  color: #333;
+  white-space: nowrap;
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  transform: translate(-100%, -50%);
+  animation: bannerMove 30s linear infinite;
+}
+
+@keyframes bannerMove {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: -100%;
+  }
+}
+
+
 
 input[type="text"],
 input[type="password"] {
