--- a/SE/styles.css
+++ b/SE/styles.css
@@ -148,6 +148,25 @@ label {
   width: 120px;
   font-weight:bold;
 }
+.textbox {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.textarea {
+  width: 100%;
+  height: 100px;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
 .banner {
   display: none;
   background-color: #f8f8f8;
