--- a/SE/styles.css
+++ b/SE/styles.css
@@ -1,12 +1,12 @@
 /* Body styles */
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #cccccc;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+    font-family: 'Roboto Condensed', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #cccccc;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 /* Header styles */
