--- a/SE/styles.css
+++ b/SE/styles.css
@@ -1,6 +1,6 @@
 /* Body styles */
 body {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #cccccc;
