--- a/SE/styles.css
+++ b/SE/styles.css
@@ -20,11 +20,11 @@ header {
 }
 
 .menu {
-  background-color: #777777;
-  padding: 10px 0;
-  text-align: center;
-  margin-top: 0;
-   font-weight:bold;
+    background-color: #e07a5f;
+    padding: 10px 0;
+    text-align: center;
+    margin-top: 0;
+    font-weight: bold;
 }
 
 .menu li {
