--- a/SE/styles.css
+++ b/SE/styles.css
@@ -125,9 +125,9 @@ section {
 }
 
 h2 {
-  color: #007bff;
-  text-align: center;
-  font-weight:bold;
+    color: 81b29a;
+    text-align: center;
+    font-weight: bold;
 }
 
 /* Form styles */
