--- a/SE/styles.css
+++ b/SE/styles.css
@@ -20,11 +20,11 @@ header {
 }
 
 .menu {
-    background-color: #e07a5f;
-    padding: 10px 0;
-    text-align: center;
-    margin-top: 0;
-    font-weight: bold;
+  background-color: #777777;
+  padding: 10px 0;
+  text-align: center;
+  margin-top: 0;
+   font-weight:bold;
 }
 
 .menu li {
@@ -40,9 +40,9 @@ header {
    font-weight:bold;
 }
 
-    .menu li a:hover {
-        background-color: #f4f1de;
-    }
+.menu li a:hover {
+  background-color: #d9d9d9;
+}
 /* Existing styles */
 
 /* Existing styles */
@@ -125,9 +125,9 @@ section {
 }
 
 h2 {
-    color: 81b29a;
-    text-align: center;
-    font-weight: bold;
+  color: #81b29a;
+  text-align: center;
+  font-weight:bold;
 }
 
 /* Form styles */
