--- a/SE/styles.css
+++ b/SE/styles.css
@@ -238,12 +238,12 @@ button:hover {
 
 /* Footer styles */
 footer {
-  background-color: #007bff;
-  padding: 10px;
-  text-align: center;
-  color: white;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
+    background-color: #81b29a;
+    padding: 10px;
+    text-align: center;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
