--- a/SE/styles.css
+++ b/SE/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #cccccc;
+    background-color: #f4f1de;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
