--- a/SE/styles.css
+++ b/SE/styles.css
@@ -11,6 +11,7 @@ body {
 
 /* Header styles */
 header {
+    font-family: 'Bebas Neue', sans-serif;
     background-color: #f4f1de;
     padding: 10px;
     display: flex;
