--- a/SE/styles.css
+++ b/SE/styles.css
@@ -11,7 +11,7 @@ body {
 
 /* Header styles */
 header {
-    font-family: 'Fjalla One', sans-serif;
+    font-family: 'Barlow Condensed', sans-serif;
     background-color: #f4f1de;
     padding: 10px;
     display: flex;
