--- a/SE/styles.css
+++ b/SE/styles.css
@@ -18,7 +18,7 @@ header {
     align-items: center;
     justify-content: space-between;
     margin-bottom: 0;
-    font-weight: lighter 300;
+    font-weight: lighter;
 }
 
 .menu {
