--- a/SE/styles.css
+++ b/SE/styles.css
@@ -1,15 +1,8 @@
 /* Body styles */
-<style >
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap');
-</style >
+
 body {
-<<<<<<< HEAD
-    font-family: 'Teko', sans-serif;
-    sans-serif margin: 0;
-=======
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Teko', sans-serif
     margin: 0;
->>>>>>> 044b67bad542ff1a1507b63049ad801639ab539a
     padding: 0;
     background-color: #f4f1de;
     display: flex;
@@ -19,17 +12,13 @@ body {
 
 /* Header styles */
 header {
-<<<<<<< HEAD
-=======
-    font-family: 'Barlow Condensed', sans-serif;
->>>>>>> 044b67bad542ff1a1507b63049ad801639ab539a
     background-color: #f4f1de;
     padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 0;
-    font-weight:100;
+    font-weight: lighter;
 }
 
 .menu {
