--- a/SE/styles.css
+++ b/SE/styles.css
@@ -1,7 +1,6 @@
 /* Body styles */
-
 body {
-    font-family: 'Teko', sans-serif
+    font-family: 'Teko', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f1de;
