--- a/SE/styles.css
+++ b/SE/styles.css
@@ -1,6 +1,6 @@
 /* Body styles */
 body {
-    font-family: 'Teko', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f1de;
@@ -11,7 +11,7 @@ body {
 
 /* Header styles */
 header {
-    font-family: 'Teko', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #f4f1de;
     padding: 10px;
     display: flex;
@@ -22,6 +22,7 @@ header {
 }
 
 .menu {
+    font-family: 'Roboto', sans-serif;
     background-color: #e07a5f;
     padding: 10px 0;
     text-align: center;
@@ -106,6 +107,7 @@ header {
 }
 
 h1 {
+    font-family: 'Teko', sans-serif;
     color: #81b29a;
     margin: 0;
     text-align: center;
