--- a/SE/styles.css
+++ b/SE/styles.css
@@ -111,11 +111,11 @@ h1 {
     color: #81b29a;
     margin: 0;
     text-align: center;
-    font-size: 60px; /* Adjust the font size as needed */
+    font-size: 70px; /* Adjust the font size as needed */
     font-weight: bold;
     flex: 1;
     margin-left: -140px;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 /* Main section styles */
