--- a/SE/styles.css
+++ b/SE/styles.css
@@ -129,9 +129,10 @@ section {
 }
 
 h2 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Teko', sans-serif;
     color: #81b29a;
     text-align: center;
+    font-weight: lighter 100;
 }
 
 /* Form styles */
